[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
litesvm = "0.4.0"
solana-mixer = { path = "../programs/solana-mixer" }
borsh = "0.10"
tokio = { version = "1.0", features = ["full"] }
#mixer-lib = { path = "../../prove-server/lib" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde = "1.0.219"
num-bigint = "0.4"
light-poseidon = "0.3.0"
ark-bn254 = "0.5"
solana-transaction-status = "2.1.6"
base64 = "0.22.1"
hex = "0.4"
incrementalmerkletree = { version = "=0.8.2", default-features = false }
bridgetree = "0.6.0"
solana-poseidon = "2.1.6"
anyhow = "1.0.98"
dir = "0.1.2"
dirs = "6.0.0"

[patch.crates-io]
incrementalmerkletree = { version = "=0.8.2", package = "incrementalmerkletree" }
