[package]
name = "poseidon-hasher"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poseidon_hasher"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[build-dependencies]
ark-serialize = { version = "0.5", features = ["derive"] }
light-poseidon = { version = "0.3.0" }
ark-bn254 = { version = "0.5.0", features = ["std"] }


[dependencies]
anchor-lang = { version = "0.31.1" }
solana-program = "=2.1.6"
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
ark-crypto-primitives = { version = "0.5.0", features = ["sponge"] }
ark-ff = { version = "=0.5.0", features = ["std"] }
ark-bn254 = { version = "0.5.0", features = ["std"] }
once_cell = "1.17"
ark-serialize = { version = "0.5", features = ["derive"] }
light-poseidon = { version = "0.3.0" }

#solana-program = "=2.1.6"
#sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }
#ark-serialize = { version = "0.5", features = ["derive"] }

#arksponge = { package = "ark-sponge", version = "0.3", features = [
#    "poseidon",
#    "std",
#] }
#ark-ff = { version = "0.5", features = ["std"] }
#ark-bn254 = { version = "0.5", features = ["std"] }
#once_cell = "1.17"
